# articles

./: LICENSE  README.md  asciidoctor_wrapper.rb  build.sh
_generator/: LICENSE  asciidoctor_wrapper.rb  lepota.css
bm/mastercopy/: index.html
bm/src/: bragracadabra.dia  combined-better.dia  compare-twice.dia  index.txt  l2r-vs-r2l.dia  make-tables.c  match-full.dia  match-none.dia  match-partial.dia  max-shift-graph.dia  negative-shift.dia
codesearch/mastercopy/: index.html
codesearch/src/: index.txt
hdp/ep1-join/: Makefile
hdp1/: Makefile
hdp1/mastercopy/: index.html
hdp1/src/: between-map-reduce.dia  index.txt  join-dataflow-v1.dia  sessions-join-users.dia  slow-reducer.dia
hdp2/src/: select-comparison.dia  select-dataflow-v3.dia
inline/mastercopy/: index.html
inline/src/: extern.dia  index.txt  static.dia
lepota/mastercopy/: demo.html  index.html  lepota.css  lepota.min.css  rare.html
lepota/src/: demo.txt  index.txt  jack.py  lepota.scss  rare.txt
lxcdeb/mastercopy/: index.html
lxcdeb/src/: cstack.dia  index.txt  net.dia  ugidmap.dia  xforwarding.dia
minhash1/mastercopy/: index.html
minhash1/src/: dataflow.dia  index.txt  overview.dia  pipeline.dia  shuffle.dia
mlp/mastercopy/: index.html
mlp/src/: index.txt  knob.dia  tiers.dia
partition/code/: Makefile  benchmark.cc  carousel.h  chunk_twine.h  item_twine.h  polyset.h  run.sh
partition/mastercopy/: index.html
partition/src/: carousel.dia  chunk_twine.dia  code.txt  index.txt  item_twine.dia  ui.dia
scrumdysf/: Makefile
scrumdysf/mastercopy/: index.html
scrumdysf/src/: index.txt
sim/shingle/: .gitignore  CMakeLists.txt  convert.sh  lock_cpu_frequency.sh
sim/shingle/src/: Codegen.java  isalphanum.cc  isalphanum.h  shingle.cc  shingle.h  shingle_exe.cc  shingle_test.cc
smine/mastercopy/: index.html
smine/src/: burning.dia  differences.dia  index.txt  transitions.dia
srvsup/: Makefile
srvsup/mastercopy/: index.html
sspar/: Makefile  README
transpose/: animate.py  blk.py  blocks.py  cache_set_load.py  naive.py  table.py
(+154 files in other folders)
